# paperless-infra

./: .cursorrules  .gitignore  DEPLOYMENT_STATUS.md  QUICK_START.txt  README.md  RESET_LOG.md  SSH_ACCESS.md  STARTUP_PROMPT.md  cursor_paperless_administration_with_cl.md  paperless-ngx-deployment.plan.md
.cursor/: mcp.json
.cursor/commands/: gha.md
archive/: Code.js  README.md  README_Message_IDs.md  README_Workflow_ELI5_OLD.md  email-attachments-page-6cfd8866.plan.md  gmail-to-paperless-final.js  gmail-to-paperless.js  tabula-rasa-reset.md  tabula-rasa-reset.py  tabula-rasa-reset.sh
config/: categories_mapping.json
docs/: README.md  README_Deploy.md  README_Email_Filter.md  README_Email_Integration.md
docs/architecture/: README_Complete_Workflow.md  README_Deduplication.md  README_Deduplication_v4.2.md  README_GALAXY_SYSTEM_KI_NAVIGATION.md
docs/development/: README_MCP_Administration.md  README_Usage.md
docs/setup/: GOOGLE_ACCOUNTS_SETUP.md  README_Deploy.md  README_Deployment_v4.2.md  SSH_ACCESS.md
examples/: README.md
ideas/: README.md  README_AI_Classifier_PLAN.md  email-filter-supabase-plan.md  umlaute-in-ordnernamen.md
infra/: cloud-init.yaml  docker-compose.yml  paperless.env.example
infra/caddy/: Caddyfile
infra/eml2pdf/: Dockerfile  app.py
infra/invoice-ai/: app.py  (+1 more)
onboarding/: QUICK_START.md  README.md  START_HERE.md  STATUS_REPORT.md
scripts/: CLEANUP_README.md  cleanup-google-drive-attachments.js  deploy-apps-script.py  deploy-to-apps-script.py
scripts/paperless-mcp/: README.md  pyproject.toml  server.py
tests/: README.md
(+17 files in other folders)
