[project]
name = "paperless-ngx-mcp"
version = "1.0.0"
description = "Model Context Protocol Server for Paperless-NGX"
authors = [{name = "Philip König"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
paperless-mcp = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

